--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,1 +1,98 @@
-<h1>Author</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Forms and Validations</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="js/form.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Bilbo+Swash+Caps" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="css/form.css">
+</head>
+<body>
+
+  <h1>Revolution Vending</h1>
+
+  <div class="form-data">
+    <form action="my-form" method="Post" onsubmit="return formSubmit();" action="">
+      <label for="name">Name</label>
+      <input name="name" type="text" id="name" placeholder="First Last" ><br/>
+
+      <label for="address">Address</label>
+      <input name="address" type="text" id="address" placeholder="address"><br/>
+
+      <label for="city">City</label>
+      <input name="city" type="text" id="city" placeholder="city"><br/>
+
+      <label for="province">Province</label>
+      <input name="province" type="text" id="province" placeholder="province"><br/>
+
+      <label for="phone-number">Phone Number</label>
+      <input name="phone-number" type="number" id="phone-number" placeholder="xxxxxxxxxx"><br/>
+
+      <label for="email">Email</label>
+      <input name="email" type="email" id="email" placeholder="email@domain.com"><br/>
+
+
+      <label for="medical-tape">Medical Tape</label>
+      <input name="medical-tape" type="number" id="medical-tape" placeholder="Enter quantity number"><br/>
+
+      <label for="chalk">Chalk</label>
+      <input name="chalk" type="number" id="chalk" placeholder="Enter quantity number"><br/>
+
+      <label>Gymnastics suit</label>
+      <select name="gymnastic-suit" id="gymnastic-suit">
+          <option value="">----- Select -----</option>
+          <option value="small">small</option>
+          <option value="medium">medium</option>
+          <option value="large">large</option>
+      </select><br/>
+
+      <label>Grips</label>
+      <select name="gymnastic-grip" id="gymnastic-grip">
+          <option value="">----- Select -----</option>
+          <option value="small">Small</option>
+          <option value="medium">Medium</option>
+          <option value="large">Large</option>
+      </select><br/>
+
+      
+      <input type="submit" value="Submit">
+
+      <p id="errors"></p>
+
+        
+    
+    </form>
+  </div>
+
+  <div class="form-data-results">
+      <p id="form-results">This is where the form data will show up.</p>
+    </div>
+
+
+
+    <!-- <section class="w50">
+        <form name="myform" method="Post" onsubmit="return formSubmit();"  action="" >
+          <label>Name</label>
+          <input id="name" placeholder="First Last" type="text" name="name"><br/>
+    
+          <label>Email</label>
+          <input id="email" placeholder="email@domain.com" type="email" name="email"><br/>
+    
+          <label>Phone</label>
+          <input id="phone" placeholder="123-123-1234" type="phone" name="phone"><br/>
+    
+          <label>Post Code</label>
+          <input id="postcode" placeholder="X9X 9X9" type="postcode" name="postcode"><br/>
+          
+          <label>Will you have lunch?</label>
+          <input type="radio" value="yes" id="radio1" name="lunch">Yes
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          <input type="radio" value="no" id="radio2" name="lunch">No -->
+          <br/>
+
+
+
+</body>
