updating validations for form

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -22,10 +22,10 @@
       <input name="name" type="text" id="name" placeholder="First Last" ><br/>
 
       <label for="address">Address</label>
-      <input name="address" type="text" id="address" placeholder="address"><br/>
+      <input name="address" type="text" id="address" placeholder="eg. 123 Main Street"><br/>
 
       <label for="city">City</label>
-      <input name="city" type="text" id="city" placeholder="city"><br/>
+      <input name="city" type="text" id="city" placeholder='eg. "Toronto" or "New Dundee"'><br/>
 
       <label>Province</label>
       <select name="province" id="province">
