--- a/views/form.ejs
+++ b/views/form.ejs
@@ -43,7 +43,7 @@
       </select><br/>
 
        <label for="phone-number">Phone Number</label>
-      <input name="phone-number" type="number" id="phone-number" placeholder="xxxxxxxxxx"><br/>
+      <input name="phone-number" type="text" id="phone-number" placeholder="xxxxxxxxxx"><br/>
 
       <label for="email">Email</label>
       <input name="email" type="email" id="email" placeholder="email@domain.com"><br/>
@@ -51,25 +51,25 @@
   <!-- Products for sale-->
 
       <label for="medical-tape">Medical Tape</label>
-      <input name="medical-tape" type="number" id="medical-tape" placeholder="Enter quantity number"><br/>
+      <input name="medical-tape" type="text" id="medical-tape" placeholder="Enter quantity number"><br/>
 
       <label for="chalk">Chalk</label>
-      <input name="chalk" type="number" id="chalk" placeholder="Enter quantity number"><br/>
+      <input name="chalk" type="text" id="chalk" placeholder="Enter quantity number"><br/>
 
-      <label>Gymnastics suit</label>
+      <label>Gymnastic suit</label>
       <select name="gymnastic-suit" id="gymnastic-suit">
           <option value="">----- Select -----</option>
-          <option value="small">small</option>
-          <option value="medium">medium</option>
-          <option value="large">large</option>
+          <option value="s">Small $2</option>
+          <option value="m">Medium $3</option>
+          <option value="l">Large $5</option>
       </select><br/>
 
       <label>Grips</label>
       <select name="gymnastic-grip" id="gymnastic-grip">
           <option value="">----- Select -----</option>
-          <option value="small">Small</option>
-          <option value="medium">Medium</option>
-          <option value="large">Large</option>
+          <option value="s">Small $2</option>
+          <option value="m">Medium $3</option>
+          <option value="l">Large $5</option>
       </select><br/>
 
 
