debugging to only allow for items selected to be listed on the receipt

--- a/public/css/stylesheets.css
+++ b/public/css/stylesheets.css
@@ -43,6 +43,9 @@ h1 {
   text-align: left;
 }
 
-input {
-  align-items: right;
+label {
+  text-align: left;
+  display: inline-block;
+  margin: 4px;
+  
 }
