--- a/views/form.ejs
+++ b/views/form.ejs
@@ -123,10 +123,9 @@
 
     <div class="formData">
       <% if (typeof(errors) != 'undefined') { for(let error of errors) { %>
-        <p class="errors"><%= error.msg %></p>
-      <% }  
-        } else if (typeof(name) != 'undefined' && totalAmount > 10) { %>
-        <p id="form-results"><%= `${name}'s Receipt` %></p>
+      <p class="errors"><%= error.msg %></p>
+      <% } } else if (typeof(name) != 'undefined' && totalAmount > 10) { %>
+      <p id="form-results"><%= `${name}'s Receipt` %></p>
 
       <table class="user-receipt">
         <tr>
@@ -157,31 +156,28 @@
           <th>City:</th>
           <td><%= city %></td>
         </tr>
-        
-          <% if(medicalTapeCost !== 0) { %>
-            <tr>
-            <th>Medical Tape:</th>
-            <td><%= medicalTapeCost %></td>
-            </tr>
-          <% } %>
-          <% if(chalkCost !== 0) { %>
-            <tr>
-              <th>Chalk:</th>
-              <td><%= chalkCost %></td>
-            </tr>
-          <% } %>
-          <% if(gymnasticSuitCost !== 0) { %>
-            <tr>
-              <th>Gymnastic Suit:</th>
-              <td><%= gymnasticSuitCost %></td>
-            </tr>
-          <% } %>
-          <% if( gymnasticGripCost !== 0) { %>
-            <tr>
-              <th>Gymnastic Grip:</th>
-              <td><%= gymnasticGripCost %></td>
-            </tr>
-          <% } %>          
+
+        <% if(medicalTapeCost !== 0) { %>
+        <tr>
+          <th>Medical Tape:</th>
+          <td><%= medicalTapeCost %></td>
+        </tr>
+        <% } %> <% if(chalkCost !== 0) { %>
+        <tr>
+          <th>Chalk:</th>
+          <td><%= chalkCost %></td>
+        </tr>
+        <% } %> <% if(gymnasticSuitCost !== 0) { %>
+        <tr>
+          <th>Gymnastic Suit:</th>
+          <td><%= gymnasticSuitCost %></td>
+        </tr>
+        <% } %> <% if( gymnasticGripCost !== 0) { %>
+        <tr>
+          <th>Gymnastic Grip:</th>
+          <td><%= gymnasticGripCost %></td>
+        </tr>
+        <% } %>
         <tr>
           <th>Sub Total:</th>
           <td>$<%= subTotal %></td>
@@ -197,12 +193,13 @@
       </table>
 
       <% } else { %>
-        <p id="form-results"></p>
-          <table>
-            <tr>
-              <th>Minimum puchase of $10 required to complete order</th>
-            </tr>
-          </table>
+      <p id="form-results"></p>
+      <table>
+        <tr>
+          <th>Minimum puchase of $10 required to complete order</th>
+        </tr>
+      </table>
+
       <% } %>
     </div>
   </section>
