added territories to the select option and updated logic for calculating tax

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -47,7 +47,7 @@
         </div>
 
         <div class="province-label">
-          <label>Province</label>
+          <label>Province/Territory</label>
           <select name="province" id="province">
             <option value="">----- Select -----</option>
             <option value="bc">British Columbia</option>
@@ -60,6 +60,9 @@
             <option value="pe">Prince Edward Island</option>
             <option value="nb">New Brunswick</option>
             <option value="nf">Newfoundland</option>
+            <option value="yt">Yukon</option>
+            <option value="nt">Northwest Territories</option>
+            <option value="nu">Nunavut</option>
           </select>
         </div>
         <div class="phone-label">
@@ -85,7 +88,7 @@
         <!-- Products for sale-->
 
         <div class="medical-tape-label">
-          <label for="medical-tape">Medical Tape</label>
+          <label for="medical-tape">Medical Tape - $3</label>
           <input
             name="medicalTape"
             type="text"
@@ -95,7 +98,7 @@
         </div>
 
         <div class="chalk-label">
-          <label for="chalk">Chalk</label>
+          <label for="chalk">Chalk - $2</label>
           <input
             name="chalk"
             type="text"
