--- a/views/form.ejs
+++ b/views/form.ejs
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Forms and Validations</title>
+  <title>Revolution Vending 3</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script type="text/javascript" src="js/index.js"></script>
   <link
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="css/stylesheets.css" />
 </head>
-<body>
+<body></body>
   <h1>Revolution Vending</h1>
 
   <section class="flex-container">
