--- a/views/form.ejs
+++ b/views/form.ejs
@@ -154,7 +154,7 @@
           <td><%= city %></td>
         </tr>
         <tr>
-          <th>Province:</th>
+          <th>Province/Territory:</th>
           <td><%= province %></td>
         </tr>
         <tr>
