--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,7 +1,7 @@
 <!--Author- Najeam Mehanmal 7457195-->
 <%- include('layouts/header'); -%>
 
-<body>
+<body id="ordersform">
   <%- include('layouts/nav'); -%>
   <h1>Revolution Vending</h1>
 
